--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
