--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
