--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
     "zustand": "^4.5.2"
   },
